dev_move_test/objects/License__c.object
<CustomObject>
    <description>Represents a license sold to an account containing seats</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account this license is tied to</description>
        <inlineHelpText>The account this license is tied to (a license can only be applied to a single account)</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Seats__c</fullName>
        <label>Active Seats</label>
        <summaryFilterItems>
            <field>License_Users__c.Seat_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Users__c.License__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Seats__c</fullName>
        <formula>Purchased_Seats__c -  Active_Seats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expired_Seats__c</fullName>
        <description>Number of trial seats past the expiration date</description>
        <inlineHelpText>Number of trial seats past the expiration date</inlineHelpText>
        <label>Expired Seats</label>
        <summaryFilterItems>
            <field>License_Users__c.Seat_Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Users__c.License__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Cost__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The base cost per user seat per month</description>
        <inlineHelpText>The base cost per user seat per month</inlineHelpText>
        <label>Monthly Cost</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the account gets billed at 50% discount rate for the license</description>
        <inlineHelpText>Determines if the account gets billed at 50% discount rate for the license</inlineHelpText>
        <label>Non Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchased_Seats__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of seats already purchased under the license agreement</description>
        <inlineHelpText>The total number of seats already purchased under the license agreement</inlineHelpText>
        <label>Purchased Seats</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Cost__c</fullName>
        <formula>IF( Non_Profit__c , (Monthly_Cost__c *  Purchased_Seats__c) * 0.50, (Monthly_Cost__c *  Purchased_Seats__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trial_Seats__c</fullName>
        <description>The number of seat licenses currently in trial</description>
        <inlineHelpText>The number of seat licenses currently in trial</inlineHelpText>
        <label>Trial Seats</label>
        <summaryFilterItems>
            <field>License_Users__c.Seat_Status__c</field>
            <operation>equals</operation>
            <value>Trial</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Users__c.License__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>